--- a/css/style.css
+++ b/css/style.css
@@ -62,11 +62,11 @@ article {
 
 article img {
     width: 20%;
-    border: 3px solid transparent
+  border: 3px solid transparent;
 }
 
 article img.szegely {
-    border-color: #fff
+  border-color: #fff;
 }
 
 img {
