--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,14 @@ section {
     height: 100%;
 }
 
+.szamlalo {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
 article {
     display: flex;
 }
