--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,22 @@ section {
 
 .bal,
 .jobb {
-  width: 50px;
-  height: 50px;
+  background: url("../kepek/nyilak.svg");
+  background-size: cover;
+  width: 60px;
+  height: 60px;
   border: none;
   color: transparent;
   background-repeat: no-repeat;
-  background-position: center;
   cursor: pointer;
+}
+
+.bal {
+  background-position: left center;
+}
+
+.jobb {
+  background-position: right center;
 }
 
 .bal:hover,
