--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
 body {
   background-color: #000;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 section {
@@ -14,14 +17,6 @@ section {
   justify-content: center;
   align-items: center;
   gap: 20px;
-}
-
-.bal {
-  background: url("../kepek/balra-nyil.svg");
-}
-
-.jobb {
-  background: url("../kepek/jobbra-nyil.svg");
 }
 
 .bal,
