--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,13 @@ section {
 }
 
 article {
-  display: flex;
+  display: grid;
+  grid-auto-flow: column;
+  max-width: 1920px;
 }
 
 article img {
-  width: 20%;
+  width: 100%;
   border: 3px solid transparent;
 }
 
