--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,16 @@
 body {
   background-color: #000;
   padding: 10px;
+  color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h1 {
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 30px
 }
 
 .nagykep-es-leptetogombok {
@@ -66,11 +73,11 @@ body {
   padding: 10px;
 }
 
-article {
+.galeria {
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
-  max-width: 1920px;
+  max-width: 1550px;
 }
 
 article img {
@@ -87,13 +94,29 @@ img {
   user-select: none;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+footer span {
+  display: block;
+}
+
 @media screen and (max-width: 1000px) {
   body {
     padding: 0;
+    padding-top: 10px;
   }
 
   main {
     position: relative;
+  }
+
+  h1 {
+    font-size: clamp(0.6em, 3.5vw, 1.5em); 
   }
 
   .nagykep-es-leptetogombok {
@@ -103,7 +126,7 @@ img {
 
   .elozo-kep-gomb, .kovetkezo-kep-gomb {
     position: absolute;
-    opacity: 0;
+    opacity: 0.3;
     width: 6%;
     height: auto;
     aspect-ratio: 1/1;
@@ -136,5 +159,9 @@ img {
 
   article img {
     border: 0.3vw solid transparent;
+  }
+
+  footer {
+    font-size: clamp(0.6em, 1.6vw, 1.5em)
   }
 }
