--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,8 @@ body {
   background-color: #000;
   padding: 10px;
   color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 1550px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -67,9 +66,7 @@ h1 {
 }
 
 .szamlalo {
-  color: #fff;
-  display: flex;
-  justify-content: center;
+  text-align: center;
   padding: 10px;
 }
 
@@ -77,7 +74,6 @@ h1 {
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
-  max-width: 1550px;
 }
 
 article img {
@@ -97,7 +93,6 @@ img {
 footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -117,8 +112,6 @@ footer span {
 
   .nagykep-es-leptetogombok {
     gap: 0;
-    height: 100%;
-    position: relative;
   }
 
   .elozo-kep-gomb, .kovetkezo-kep-gomb {
